// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxDrawerFooter customize 1`] = `
<div>
  <div
    class="drawer-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxDrawerFooter component 1`] = `
<div>
  <div
    class="drawer-footer"
  >
    Test
  </div>
</div>
`;
